[package]
name = "mnemebrain"
version = "0.1.0-alpha.2"
edition = "2021"
description = "Rust SDK for MnemeBrain — belief-based memory for AI agents"
license = "MIT"
repository = "https://github.com/mnemebrain/mnemebrain-rust"
homepage = "https://github.com/mnemebrain/mnemebrain-rust"
keywords = ["ai", "memory", "belief", "agent", "llm"]
categories = ["api-bindings", "science"]
rust-version = "1.70"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
